# wagtail-sb-socialnetworks

./: .bandit  .gitignore  .pre-commit-config.yaml  .pylintrc  .travis.yml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  pyproject.toml  requirements.dev.txt  requirements.txt  setup.cfg  tbump.toml
demoproject/: Dockerfile  manage.py
demoproject/demoproject/: wsgi.py
demoproject/demoproject/settings/: base.py  dev.py
demoproject/demoproject/templates/: base.html
src/wagtail_sb_socialnetworks/: __init__.py  apps.py  models.py
src/wagtail_sb_socialnetworks/locale/es/LC_MESSAGES/: django.po
src/wagtail_sb_socialnetworks/migrations/: 0001_initial.py  0002_alter_socialnetwork_icon.py  0003_rename_sitesettings_sitesocialnetworkprofile_site_settings_and_more.py
wagtail_sb_socialnetworks/: models.py
wagtail_sb_socialnetworks/locale/es/LC_MESSAGES/: django.po
wagtail_sb_socialnetworks/migrations/: 0001_initial.py
