[tool.poetry]
name = "wagtail-sb-socialnetworks"
version = "0.3.0"
description = "Social Networks settings for wagtail sites."
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/wagtail-sb-socialnetworks"
repository = "https://github.com/softbutterfly/wagtail-sb-socialnetworks"
documentation = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/wiki"
keywords = ["Softbutterfly", "Django", "Migrations"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "wagtail_sb_socialnetworks", from = "src" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/archive/v0.3.0.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/issues"


[tool.poetry.dependencies]
python = ">= 3.8, < 4.0.0"
Django = "< 5.0"
wagtail = "< 4.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
black = "^21.6b0"
codecov = "^2.1.11"
coverage = "^5.5"
flake8 = "^3.9.2"
flake8-black = "^0.2.1"
jupyterlab = "^3.0.16"
mypy = "^0.910"
pre-commit = "^2.13.0"
pydocstyle = "^6.1.1"
pylint = "^2.9.3"
pylint-django = "^2.4.4"
pytest = "^6.2.4"
pytest-cov = "^2.12.1"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.18.0"
tox = "^3.23.1"
twine = "^3.4.1"
tbump = "^6.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
