[tool.poetry]
name = "wagtail-sb-socialnetworks"
version = "0.4.0"
description = "Social Networks settings for wagtail sites."
authors = [
  "SoftButterfly Development Team <dev@softbutterfly.io>",
  "zodiacfireworks <martin.vuelta@gmail.com>"
]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/softbutterfly/wagtail-sb-socialnetworks"
repository = "https://github.com/softbutterfly/wagtail-sb-socialnetworks"
documentation = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/wiki"
keywords = ["Softbutterfly", "Django", "Migrations"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [
    { include = "wagtail_sb_socialnetworks", from = "src" }
]
include = [
  "LICENSE.txt",
  "CHANGELOG.md",
]

[tool.poetry.urls]
"Download" = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/archive/v0.4.0.tar.gz"
"Bug Tracker" = "https://github.com/softbutterfly/wagtail-sb-socialnetworks/issues"


[tool.poetry.dependencies]
python = ">= 3.8, < 4.0.0"
Django = "< 5.0"
wagtail = "< 5.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.7.0"
black = "^22.8.0"
codecov = "^2.1.12"
coverage = "^6.5.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
jupyterlab = "^3.4.7"
mypy = "^0.981"
pre-commit = "^2.20.0"
pydocstyle = "^6.1.1"
pylint = "^2.15.3"
pylint-django = "^2.5.3"
pytest = "^7.1.3"
pytest-cov = "^4.0.0"
pytest-vcr = "^1.0.2"
python-dotenv = "^0.21.0"
tox = "^3.26.0"
twine = "^4.0.1"
tbump = "^6.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
