[metadata]
description-file = README.md

[flake8]
exclude =
    .*/,
    __pycache__/,
ignore = H101,H238,H301,H306,W503,F401,E231,E203,E266,E501
max-line-length = 88

[pep8]
exclude =
    .*/,
    __pycache__/,
    node_modules/,
    */migrations/
ignore = H101,H238,H301,H306,W503,F401
max-line-length = 88

[pydocstyle]
ignore = D100, D101, D102, D103, D104, D105, D106, D107, D203, D213, D407, D202
inherit = false
match-dir = wagtail_sb_socialnetworks

[isort]
skip =
    .direnv
    .tox
    .venv
    migrations
    node_modules
    example

# Vertical Hanging Indent
multi_line_output = 3
include_trailing_comma = True
combine_as_imports = True

line_length = 88
known_first_party = wagtail_sb_socialnetworks
known_third_party =django,modelcluster,wagtail

[tool:pytest]
addopts = --vcr-record=none
testpaths = tests
filterwarnings =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning
markers =
    integration

[mypy]
ignore_missing_imports = True
allow_untyped_globals = True
show_error_codes = True

[mypy-wagtail_sb_socialnetworks.*]
ignore_missing_imports = True
